# super-lamp

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  compose.yaml  justfile
.claude/: settings.json
.codebase-memory/: adr.md
apps/actual-budget/: compose.yaml
apps/addon-manager/: compose.yaml
apps/adguard/: compose.yaml
apps/aiolists/: compose.yaml  config.env
apps/aiometadata/: compose.yaml  config.env
apps/aiostreams/: compose.yaml  config.env
apps/aiostremio/: compose.yaml  config.env  config.json
apps/altmount/: compose.yaml
apps/anime-kitsu/: compose.yaml
apps/apprise/: compose.yaml
apps/arcane/: compose.yaml
apps/audiobookshelf/: compose.yaml
apps/authelia/: compose.yaml
apps/autosync/: compose.yaml
apps/bazarr/: compose.yaml
apps/beszel/: compose.yaml
apps/bitmagnet/: compose.yaml  config.env
apps/booklore/: compose.yaml
apps/borgmatic/: compose.yaml  config.env
apps/byparr/: compose.yaml
apps/calibre-web-automated/: compose.yaml
apps/cloudflare-ddns/: compose.yaml
apps/comet/: compose.yaml  config.env
apps/crowdsec/: compose.yaml
apps/dash/: compose.yaml  config.env
apps/debrid-media-manager/: compose.yaml
apps/debridav/: compose.yaml  config.env
apps/decypharr/: compose.yaml
apps/discord-tickets/: compose.yaml
docs/: observability-primer.md
duckdns/: duck.sh
gitops/: CLAUDE.md  README.md  RESTORE.md
scripts/: validate-gitops.sh
tools/image-currency/: CLAUDE.md  Cargo.toml  README.md
tools/image-currency/src/: discover.rs  health.rs  main.rs  registry.rs
(+417 files in other folders)
