[package]
name = "image-currency"
version = "0.1.0"
edition = "2021"
description = "Digest-currency checker / applier / health gate for the GitOps image pins"

[[bin]]
name = "image-currency"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde_json = "1"
regex = "1"
anyhow = "1"
walkdir = "2"

[profile.release]
opt-level = 2
strip = true
